--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,9 @@
 !.env.example
 
 # Google Cloud / Service Account Credentials
-# Remove the overly broad *.json rule if it exists and use specific patterns:
-# !*.json # If you had *.json previously and want to un-ignore most JSONs
-*-firebase-adminsdk*.json
-# Exception for our specific credentials file
-!ales-f75a1-firebase-adminsdk-fbsvc-e008504e79.json
+*adminsdk*.json
+*service-account*.json
+*deployer*-key.json
 *-sa.json
 *.private.*json
 credentials.json
