--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@ python-dotenv==1.0.0
 fastapi==0.109.2
 uvicorn==0.27.1
 pydantic==2.6.1
+schedule==1.2.0
+pytz==2023.3
 
 # Development dependencies
 pytest==7.4.3
