--- a/dev_helpers/summaries/requirements.txt
+++ b/dev_helpers/summaries/requirements.txt
@@ -1,4 +1,4 @@
-hash:98fc41e9d6f19be3bd9a47e18f3f6777e90c8a5e98f85b40ba75c31f07aad591
-path:requirements.txt | source:requirements.txt | lastUpdated:2025-05-21T13:05:08.956171 | lines:15
+hash:996f5947c929016aa3e3bcbd8c5ae001a3a6a08fe63ee88d79577e4c2d1f079f
+path:requirements.txt | source:requirements.txt | lastUpdated:2025-05-23T20:36:31.516736 | lines:17
 
-This `requirements.txt` file lists the Python dependencies for a project. It includes libraries for building a FastAPI web API (`fastapi`, `uvicorn`) and interacting with external services. Key integrations include the Telegram Bot API (`python-telegram-bot`), Google Cloud Firestore (`google-cloud-firestore`), and AI models (`openai`, `google-generativeai`). Utilities like `pydantic` for data validation and `python-dotenv` for configuration are also present. Development dependencies for testing (`pytest`) and Docker interaction are included.
+This `requirements.txt` file lists Python dependencies for a project. It includes libraries for building a Telegram bot (`python-telegram-bot`) and interacting with Google Cloud Firestore (`google-cloud-firestore`) for data storage. The project leverages AI capabilities through OpenAI and Google Generative AI (`openai`, `google-generativeai`). It likely includes a web API built with FastAPI (`fastapi`) and features scheduled tasks (`schedule`). Development dependencies for testing and Docker are also listed.
